--- a/vistas/agendando.html
+++ b/vistas/agendando.html
@@ -19,11 +19,9 @@
         <form role="form" class="form-horizontal">
 
 
-            <!--PARA EL REGISTRO DE DATOS DEL VISITANTE   -->
-            <!--  <input type="date" class="btn btn-ttc btn-lg">-->
-
+            <!--PARA EL REGISTRO DE DATOS DEL VISITANTE -->
             <div class="form-group has-feedback">
-                <label for="nombre" class="control-label col-md-3"> Nombre</label>
+                <label for="nombre" class="control-label col-md-3"> Nombre </label>
                 <div class="col-md-6">
                     <div class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
@@ -60,9 +58,8 @@
                 </div>
             </div>
 
-            <!--<div class="btn-group-vertical">
-                <div class="row onl_row-sm-offset-3">
-                    <div class="col-xs-2 col-sm-2">  -->
+            <!--   -->
+
             <div class="form-group has-feedback">
                 <label for="localidad" class="control-label col-md-3"> Localidad </label>
                 <div class="col-md-6">
@@ -74,6 +71,7 @@
                 </div>
             </div>
 
+            <!--  -->
 
             <div class="form-group has-feedback">
                 <label for="local" class="control-label col-md-3"> Teléfonos </label>
@@ -87,6 +85,7 @@
 
 
                 <!-- -->
+
                 <div class="form-group has-feedback">
                     <!-- <label></label>-->
                     <div class="form-group col-lg-3">
@@ -99,10 +98,6 @@
                 </div>
 
                 <!-- -->
-
-
-
-                <!--  -->
 
                 <div class="form-group has-feedback">
                     <label for="visita" class="control-label col-md-3"> Visita a: </label>
@@ -125,78 +120,98 @@
                     </div>
                 </div>
 
-                <!--hola-->
+                <!--  -->
 
-                <div class="col-lg-offset-3">
-                    <textarea class="mitextarea" rows="3" cols="66" placeholder="Breve descripción del asunto a tratar"></textarea>
-
-
-                </div>
-                <br>
-
-
-                <!--V A L I D A C I O N -->
-
-                <div class="form-group">
-                    <button type="button" class="btn btn-success col-md-4 col-md-offset-4" id="agenda" name="agenda" data-toggle="modal" data-target=""> Guardar Datos</button>
+                <div class="">
+                    <form role="form">
+                        <div class="form-group">
+                            <label for="asunto"> Asunto a describir </label>
+                            <textarea class="form_control" rows="5" id="asunto"></textarea>
+                        </div>
+                    </form>
                 </div>
 
-                <!-- Modal true -->
 
-                <div class="modal fade" id="modaltrue" role="dialog">
-                    <div class="modal-dialog">
+                <!--  -->
 
-                        <!-- Modal content-->
+                <div class="form-group has-feedback">
+                    <label for="visita" class="control-label col-md-3"> Fecha: </label>
+                    <div class="col-md-3">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                            <input type="date" class="btn btn-ttc">
+                            <span class="glyphicon form-control-feedback verif"></span>
+                        </div>
+                    </div>
+                    <br>
+                    <br>
 
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                <h2> Exito! </h2>
+
+                    <!--V A L I D A C I O N -->
+
+                    <div class="form-group">
+                        <button type="button" class="btn btn-success col-md-4 col-md-offset-4" id="agenda" name="agenda" data-toggle="modal" data-target=""> Guardar Datos</button>
+                    </div>
+
+                    <!-- Modal true -->
+
+                    <div class="modal fade" id="modaltrue" role="dialog">
+                        <div class="modal-dialog">
+
+                            <!-- Modal content-->
+
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                    <h2> Exito! </h2>
+                                </div>
+                                <div class="modal-body">
+                                    <p>¡Capturaste correctamente los datos!</p>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-default" data-dismiss="modal"> Cerrar</button>
+                                </div>
                             </div>
-                            <div class="modal-body">
-                                <p>¡Capturaste correctamente los datos!</p>
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-default" data-dismiss="modal"> Cerrar</button>
+                        </div>
+                    </div>
+
+                    <!-- Modal false -->
+
+                    <div class="modal fade" id="modalfalse" role="dialog">
+                        <div class="modal-dialog id=tamaño">
+
+                            <!-- Modal content-->
+
+                            <div class="modal-content">
+                                <div class="modal-header1">
+                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                    <h2> Error! </h2>
+                                    <!--  <div class="alert alert-success hidden" id="success-alert"></div>-->
+                                </div>
+                                <div class="modal-body1">
+                                    <p><strong> ¡Ojo: </strong> Capture correctamente sus datos!!</p>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-default" data-dismiss="modal"> Cerrar</button>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-
-                <!-- Modal false -->
-
-                <div class="modal fade" id="modalfalse" role="dialog">
-                    <div class="modal-dialog id=tamaño">
-
-                        <!-- Modal content-->
-
-                        <div class="modal-content">
-                            <div class="modal-header1">
-                                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                <h2> Error! </h2>
-                                <!--  <div class="alert alert-success hidden" id="success-alert"></div>-->
-                            </div>
-                            <div class="modal-body1">
-                                <p><strong> ¡Ojo: </strong> Capture correctamente sus datos!!</p>
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-default" data-dismiss="modal"> Cerrar</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </form>
-    </div>
+        </div>
 
 
 
 
-    <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
-    <script src="js/ui-bootstrap-tpls-1-1-2.min.js"></script>
-    <script src="../js/controladores/agendando.js"></script>
+        <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
+        <script src="js/ui-bootstrap-tpls-1-1-2.min.js"></script>
+        <script src="../js/controladores/agendando.js"></script>
 </body>
 
 </html>
+<!--<div class="btn-group-vertical">
+                <div class="row onl_row-sm-offset-3">
+                    <div class="col-xs-2 col-sm-2">  -->
